--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.1.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "firebase": "^10.7.2",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
